style.css
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Bebas Neue", sans-serif;
  font-size: medium;
  background: black;
  color: white;
}

.grid {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  gap: 30px;
}

header {
  padding: 20px 40px;
  align-items: center;
}

header img {
  grid-column: span 6;
  background: #c93d4b;
  max-width: 100%;
  border-radius: 0.25rem;
  padding: 0.5rem;
}

header nav {
  grid-column: 8/13;
  justify-self: end;
}

header nav a {
  color: white;
  margin-left: 10px;
  text-decoration: none;
}

main {
  max-width: 1200px;
  margin: 60px auto;
  padding: 20px;
}

main img {
  grid-column: span 6;
  width: 100%;
  border-radius: 6px;
}

main .welcome {
  grid-column: 8/13;
}

main > h2 {
  grid-column: span 12;
  text-align: center;
  padding-top: 20px;
  font-size: 2em;
}

main .card-main {
  grid-column: span 4;
  padding: 10px 20px;
  border-radius: 6px;
  justify-self: center;
  box-shadow: 3px 3px 3px #c93d4b;
}

.card {
  border: 0.05rem solid rgb(255, 255, 255);
  height: 210px;
  width: 180px;
  overflow: hidden;
  position: relative;
  border-radius: 6px;
}

main .hover-me {
  background: #c93d4b;
  width: 60px;
  text-align: center;
  border-radius: 0.25rem;
  padding: 0.2rem;
}

.card:hover .img1 {
  transform: scale(1.5, 1.2) translate(5px, -30px) rotate(5deg);
}

.card:hover .img1::before {
  transition: transform 1s 0.4s;
  transform: translateX(400px) skewX(-10deg);
}

.card:hover .img2 {
  transform: translateY(120%);
}

.card .img {
  position: absolute;
  width: 100%;
  height: 50%;
  background: url(https://www.azuki.com/beannames/toshi.png);
  background-size: 100% 200%;
  transition: 0.3s all;
}

.card .img-1 {
  position: absolute;
  width: 100%;
  height: 50%;
  background: url(https://www.azuki.com/beannames/ed.png);
  background-size: 100% 200%;
  transition: 0.3s all;
}

.card .img-2 {
  position: absolute;
  width: 100%;
  height: 50%;
  background: url(https://www.azuki.com/beannames/johnny.png);
  background-size: 100% 200%;
  transition: 0.3s all;
}

.card .img1 {
  top: 0;
  right: 0;
  position: relative;
}

.card .img1::before {
  content: "";
  position: absolute;
  top: 0;
  left: -25px;
  height: 100%;
  width: 10px;
  transform: skewX(-10deg);
  background-image: linear-gradient(
    to right,
    rgb(255, 255, 255),
    rgba(255, 255, 255, 0.9)
  );
}

.card .img2 {
  bottom: 0;
  right: 0;
  background-position: bottom center;
}

.card__content {
  margin-left: 1rem;
  margin-top: 1rem;
  transform: translateX(-130%);
  transition: 0.5s ease-in-out transform 0.3s;
  position: relative;
  z-index: -1;
}

.card__content span {
  display: block;
}

.card__content .name {
  font-weight: bold;
  font-size: 1.7rem;
}

.card__content .job {
  color: #b2b2b2;
}

.card:hover .card__content {
  transform: translateX(0);
}

@media screen and (max-width: 960px) {
  header img {
    grid-column: 1 / 13;
    justify-self: center;
  }
  header nav {
    grid-column: 1 / 13;
    justify-self: center;
  }
  main img {
    grid-column: 2 / span 10;
  }
  main .welcome {
    grid-column: 3 / span 8;
    text-align: center;
  }
  main .card-main {
    grid-column: 3 / span 8;
  }
}

